--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -104,7 +104,6 @@
     14.5. Footer Middle Links
     14.6. Footer Bottom
 
-
 */
 
 /*--------------------------- 1. Page Templates ----*/
@@ -333,7 +332,7 @@
         margin: 0 auto;
 
         & li {
-            background: url("../../images/custom-icons/thumb.svg") no-repeat;
+            background: url(../../../images/custom-icons/thumb.svg) no-repeat;
             background-position: left center;
             padding: 10px 10px 10px 40px;
         }
