--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,8 +1,8 @@
-$color1: rgba(215, 7, 93, 1);
-$color2: rgba(172, 128, 160, 1);
-$color3: rgba(52, 89, 149, 1);
-$color4: rgba(25, 25, 35, 1);
-$color5: rgba(137, 170, 230, 1);
+$color1: #d7075d;
+$color2: #ac80a0;
+$color3: #345995;
+$color4: #191923;
+$color5: #89aae6;
 
 $white: #ffffff;
 $grey: #353535;
