--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -3,15 +3,15 @@
 ------------------------------------------------------
 
 1. Grid Mixins
-  1.1. Grid Template (1 Column)
-  1.2. Grid Template (4 Columns)
-  1.3. 1 Column Layout
+    1.1. Grid Template (1 Column)
+    1.2. Grid Template (4 Columns)
+    1.3. 1 Column Layout
 2. Flex Mixins
-  2.1. Space Between / Center
-  2.2. Column / Flex Start
-  2.3. Column / Center
+    2.1. Space Between / Center
+    2.2. Column / Flex Start
+    2.3. Column / Center
 3. Color Mixin
-  3.1. Background / Font Colors
+    3.1. Background / Font Colors
 
 
 */
@@ -388,16 +388,18 @@
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
-  -ms-grid-column-align: end;
-      justify-self: end;
   -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
           clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
-  overflow: hidden;
+  background-image: url(../../../images/services/household.jpg);
+  background-size: cover;
 }
 
-.storage__inner__img img {
-  width: 100%;
-  height: 100%;
+.business-img {
+  background-image: url(../../../images/services/business.jpg);
+}
+
+.student-img {
+  background-image: url(../../../images/services/student.jpg);
 }
 
 /*---------------- 4.2. Why Us? Section --*/
@@ -415,7 +417,8 @@
   margin: 0 auto;
 }
 
-.why-us__inner h3, .why-us__inner p {
+.why-us__inner h3,
+.why-us__inner p {
   text-align: center;
 }
 
@@ -919,6 +922,7 @@
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   padding: 4rem 2rem;
+  padding: 4rem 1rem;
 }
 
 /*-- 14.2. Footer Top --*/
@@ -955,12 +959,12 @@
           align-items: center;
 }
 
-.footer__top__left span {
-  margin-left: 0.5rem;
+.footer__top__left a:first-of-type {
+  margin-right: 0.8rem;
 }
 
-.footer__top__left span:first-of-type {
-  margin-right: 0.8rem;
+.footer__top__left span {
+  margin-left: 0.5rem;
 }
 
 /*-- 14.4. Footer Middle --*/
@@ -1125,6 +1129,10 @@ a {
 .burger-btn:focus, .burger-btn:active, .burger-btn:hover {
   border: none;
   outline: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 /*-- 2.5. To Top Button --*/
@@ -1845,45 +1853,50 @@ footer {
 ------------------------------------------------------
 
 1. Less Than Media Queries
-  1.1. Extra Small
-    1.1.1. Headings
-    1.1.2. Size Guide Section
-    1.1.3. Quote Form Section
-    1.1.4. Footer
-  1.2. Small
-    1.2.1. Services Section
-    1.2.2. How It Works Section
-    1.2.3. Info Section
-    1.2.4. Why Us? Section
-    1.2.5. Packing Section
-    1.2.6. Checklist
-  1.3. Medium
-    1.3.1. Burger Button
-    1.3.2. Navigation
-    1.3.3. Info Section
-    1.3.4. Storage Section
-    1.3.5. About Section
-    1.3.6. Flexible Section
-    1.3.7. Contact Section
-    1.3.8. Footer
-  1.4. Large
-    1.4.1. Services Section
-    1.4.2. How It Works Section
-    1.4.3. Packing Section
-    1.4.4. Quote Section
+    1.1. Extra Small
+        1.1.1. Navbar Top
+        1.1.2. Headings
+        1.1.3. Size Guide Section
+        1.1.4. Quote Form Section
+        1.1.5. Footer
+    1.2. Small
+        1.2.1. Services Section
+        1.2.2. How It Works Section
+        1.2.3. Info Section
+        1.2.4. Why Us? Section
+        1.2.5. Packing Section
+        1.2.6. Checklist
+    1.3. Medium
+        1.3.1. Burger Button
+        1.3.2. Navigation
+        1.3.3. Info Section
+        1.3.4. Storage Section
+        1.3.5. About Section
+        1.3.6. Flexible Section
+        1.3.7. Contact Section
+        1.3.8. Footer
+    1.4. Large
+        1.4.1. Services Section
+        1.4.2. How It Works Section
+        1.4.3. Packing Section
+        1.4.4. Quote Section
 2. More Than Media Queries
-  2.1. Small
-    2.1.1. Headings
-  2.2. Large
-    2.2.1. Headings
-  2.3. Extra Large
-    2.3.1. Headings
+    2.1. Small
+        2.1.1. Headings
+    2.2. Large
+        2.2.1. Headings
+    2.3. Extra Large
+        2.3.1. Headings
 3. Print Media Query
 
 */
 /*--------------------1. Less Than Media Queries----*/
 @media (max-width: 575px) {
-  /*-- 1.1.1. Headings --*/
+  /*-- 1.1.1. Navbar Top --*/
+  .navbar__inner__phone {
+    display: block;
+  }
+  /*-- 1.1.2. Headings --*/
   .hero h1, .hero h2, .hero h3 {
     font-size: 12vw;
   }
@@ -1896,18 +1909,18 @@ footer {
   h2 {
     font-size: 2rem;
   }
-  /*-- 1.1.2. Size Guide Section --*/
+  /*-- 1.1.3. Size Guide Section --*/
   .size-guide {
     padding: 4rem 0.5rem;
   }
-  /*-- 1.1.3. Quote Form Section --*/
+  /*-- 1.1.4. Quote Form Section --*/
   .quote-form__inner {
     display: block;
   }
   .left, .right {
     padding-right: 0;
   }
-  /*-- 1.1.4. Footer --*/
+  /*-- 1.1.5. Footer --*/
   .footer__top__left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1919,6 +1932,9 @@ footer {
   }
   .footer__top__left .footer__top-icon {
     margin-bottom: 0.5rem;
+  }
+  .footer__top__left a:first-of-type {
+    margin-right: 0;
   }
   .footer__top-icon {
     margin: 0;
@@ -2115,20 +2131,17 @@ footer {
         grid-template-columns: 1fr;
   }
   .storage__inner__info {
-    -ms-grid-column: 1;
+    -ms-grid-column: 2;
     -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     margin: 0 0 2rem 0;
   }
   .storage__inner__info h1, .storage__inner__info h2, .storage__inner__info h3 {
     font-size: 2.5rem;
   }
   .storage__inner__img {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-column-align: center;
-        justify-self: center;
+    width: 100%;
+    height: 400px;
   }
   /*-- 1.3.5. About Section --*/
   .about__info {
