--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -3,39 +3,40 @@
 ------------------------------------------------------
 
 1. Less Than Media Queries
-  1.1. Extra Small
-    1.1.1. Headings
-    1.1.2. Size Guide Section
-    1.1.3. Quote Form Section
-    1.1.4. Footer
-  1.2. Small
-    1.2.1. Services Section
-    1.2.2. How It Works Section
-    1.2.3. Info Section
-    1.2.4. Why Us? Section
-    1.2.5. Packing Section
-    1.2.6. Checklist
-  1.3. Medium
-    1.3.1. Burger Button
-    1.3.2. Navigation
-    1.3.3. Info Section
-    1.3.4. Storage Section
-    1.3.5. About Section
-    1.3.6. Flexible Section
-    1.3.7. Contact Section
-    1.3.8. Footer
-  1.4. Large
-    1.4.1. Services Section
-    1.4.2. How It Works Section
-    1.4.3. Packing Section
-    1.4.4. Quote Section
+    1.1. Extra Small
+        1.1.1. Navbar Top
+        1.1.2. Headings
+        1.1.3. Size Guide Section
+        1.1.4. Quote Form Section
+        1.1.5. Footer
+    1.2. Small
+        1.2.1. Services Section
+        1.2.2. How It Works Section
+        1.2.3. Info Section
+        1.2.4. Why Us? Section
+        1.2.5. Packing Section
+        1.2.6. Checklist
+    1.3. Medium
+        1.3.1. Burger Button
+        1.3.2. Navigation
+        1.3.3. Info Section
+        1.3.4. Storage Section
+        1.3.5. About Section
+        1.3.6. Flexible Section
+        1.3.7. Contact Section
+        1.3.8. Footer
+    1.4. Large
+        1.4.1. Services Section
+        1.4.2. How It Works Section
+        1.4.3. Packing Section
+        1.4.4. Quote Section
 2. More Than Media Queries
-  2.1. Small
-    2.1.1. Headings
-  2.2. Large
-    2.2.1. Headings
-  2.3. Extra Large
-    2.3.1. Headings
+    2.1. Small
+        2.1.1. Headings
+    2.2. Large
+        2.2.1. Headings
+    2.3. Extra Large
+        2.3.1. Headings
 3. Print Media Query
 
 */
@@ -44,7 +45,11 @@
 
 // 1.1. Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
-    /*-- 1.1.1. Headings --*/
+    /*-- 1.1.1. Navbar Top --*/
+    .navbar__inner__phone {
+        display: block;
+    }
+    /*-- 1.1.2. Headings --*/
     .hero h1 {
         font-size: 12vw;
     }
@@ -61,12 +66,12 @@
         font-size: 2rem;
     }
 
-    /*-- 1.1.2. Size Guide Section --*/
+    /*-- 1.1.3. Size Guide Section --*/
     .size-guide {
         padding: 4rem 0.5rem;
     }
 
-    /*-- 1.1.3. Quote Form Section --*/
+    /*-- 1.1.4. Quote Form Section --*/
     .quote-form__inner {
         display: block;
     }
@@ -75,13 +80,17 @@
         padding-right: 0;
     }
 
-    /*-- 1.1.4. Footer --*/
+    /*-- 1.1.5. Footer --*/
     .footer__top__left {
         display: flex;
         flex-direction: column;
 
         & .footer__top-icon {
             margin-bottom: 0.5rem;
+        }
+
+        & a:first-of-type {
+            margin-right: 0;
         }
     }
 
@@ -257,7 +266,7 @@
     }
 
     .storage__inner__info {
-        grid-column: 1 / 2;
+        grid-column: 2 / 3;
         margin: 0 0 2rem 0;
 
         & h1 {
@@ -266,8 +275,8 @@
     }
 
     .storage__inner__img {
-        grid-column: 1 / 2;
-        justify-self: center;
+        width: 100%;
+        height: 400px;
     }
 
     /*-- 1.3.5. About Section --*/
