--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -121,7 +121,7 @@ small {
     height: 100%;
     z-index: -1;
     background: linear-gradient($grey-opac),
-        url(../../../images/units.jpg) center center no-repeat;
+        url(../../images/units.jpg) center center no-repeat;
     background-size: cover;
     animation: bg-scale 20s linear infinite;
 }
